# SouthSmartCamProject-Android

./: .gitignore  README.md  build.gradle  southsmartcam
app/: CMakeLists.txt  build.gradle  fabric.properties  proguard-rules.pro
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Makefile  Readme.txt  Resource.h  jniMain.c  native-lib.cpp
app/src/main/cpp/Documents/: CGI调用接口v1.1.doc  CGI调用接口v2.0.doc  CGI调用接口v2.2.doc  vssver2.scc
app/src/main/cpp/android/: jniMain.c
app/src/main/cpp/avDecode/: audio_g711.c  shaderUtils.c  shaderUtils.cpp  shaderUtils.h  thDDraw.cpp  thDDraw.h  thEGL.c  thEGL.cpp  thEGL.h  thEGLTest.c  thEGLTest.h  thImg.c  thOpenGL_SLES.c  thOpenGL_SLES.h  thOpenSLES.c  thRec.c  thRender.c  thSDL.c  thVideoDec.c  thffmpeg.h  thmmSystem.c  thmmSystem.h
app/src/main/cpp/cJSON/: cJSON.c  cJSON.h  test  vssver2.scc
app/src/main/cpp/common/: List.c  List.h  TFun.c  skt.c  sskt_iocp.c
app/src/main/cpp/include/: MPPlay.h  TFun.h  avDecode.h  cm_types.h  libthSDK.h  mtk_SmartConfig.h  rtspPlay.h  skt.h  th_protocol.h  tmp.c
app/src/main/cpp/thSDK/: axdll.h  axdllEx.c  thPlay.c  thPlay.c.dump  thPlay.h  thPlay_android.h  thPlay_windows.h  vssver2.scc
app/src/main/jni/: Android.mk  Application.mk  build.sh
app/src/main/jni/Documents/: CGI调用接口v1.2.doc  CGI调用接口v1.3.doc  CGI调用接口v1.5.doc  CGI调用接口v2.1.doc
app/src/main/jni/android/: jni.h
app/src/main/jni/avDecode/: thImg.c  thOpenGL_SLES.c  thOpenGL_SLES.c.dump  thOpenSLES.h  thRender.c  thSDL.c  thSDL.h  thVideoDec.c  thVideoEnc.c
app/src/main/jni/cJSON/: cJSONtest.c
app/src/main/jni/common/: TFun.c  av_Queue.c  vssver2.scc
app/src/main/jni/include/: HttpsPost.h  LowNoise.h  av_Queue.h  cm_types.h  libthSDK.pas  mtk_SmartConfig.h  skt.h  sskt_iocp.h  tmp  vssver2.scc
app/src/main/jni/thSDK/: Makefile  pkt.c  rtspPlay.c
app/src/main/res/drawable/: back.xml  backwhite.xml  bground.xml  btnsnapshot.xml  button_gray_text_color.xml  button_green_corner.xml  button_green_text_color.xml  button_shape_green_nor.xml  button_shape_green_sel.xml  button_shape_white_nor.xml  button_shape_white_sel.xml  button_src.xml  button_text_color_enable.xml  button_white_corner.xml  checkbox_green_style.xml  down.xml  icon_add.xml  imagebutton_background.xml  left.xml  livefullscreen.xml  liveled.xml  livesetting.xml  livesnapshot.xml  loading_dialog_bg.xml  microphone.xml  po_seekbar.xml  right.xml  shape_green_line_cornor.xml  shape_offline.xml  shape_online_ddns.xml  shape_online_lan.xml  shape_online_p2p.xml  shape_quart.xml  shape_quart_green.xml  snapshot.xml  tab_alarm.xml  tab_device.xml  tab_media.xml  tab_mine.xml  talk.xml  (+2 more)
app/src/main/res/layout/: actionbar_title.xml  activity_about.xml  activity_add_device.xml  activity_add_device_ap2_sta.xml  activity_add_device_ap2_sta_setup.xml  activity_add_device_one_step.xml  activity_add_device_one_step_next.xml  activity_add_device_wlan.xml  activity_alarm_detail.xml  activity_alarm_list.xml  activity_change_device_pwd.xml  activity_change_login_password.xml  activity_device_share.xml  activity_forget_pwd.xml  activity_led_control.xml  activity_login.xml  activity_main.xml  activity_main_dev_list.xml  activity_main_view_pager.xml  activity_media.xml  activity_media_photo_detail.xml  activity_media_photo_list.xml  activity_play_back.xml  activity_play_back1.xml  activity_play_back2.xml  activity_play_back_list.xml  activity_play_live.xml  activity_playvid.xml  activity_push_setting.xml  activity_register.xml  activity_reset_pwd.xml  activity_sdvolume_manager.xml  activity_setting.xml  activity_share_manager.xml  activity_splash.xml  activity_system_setting.xml  (+15 more)
app/src/main/res/layout-land/: activity_play_live.xml  activity_play_live1.xml  activity_play_live2.xml
app/src/main/res/layout-port/: activity_play_live.xml  activity_play_live1.xml  activity_play_live2.xml
(+182 files in other folders)
